# Store-Management-System

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  pyproject.toml
store_management_system/: database.py  server.py
store_management_system/static/css/: leaflet.css  style.css
store_management_system/static/js/chartjs/: chart1.js  chart2.js
store_management_system/templates/: dashboard.html  employee_data.html  home.html  issue_order.html  navbar.html  orders_report.html  outlet.html  product_card.html  sidebar.html  signin.html  signup.html  signup_successful.html  user_already_present.html  user_does_not_exist.html
